Fix bugs in loading app testing

--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,13 @@
+body:has(.app) {
+  margin: 0;
+}
+
 .app {
   display: flex;
   height: 100vh;
 }
 
-.app > header {  // inside app
+.app > header {
   width: 100vw;
   height: 70px;
   background-color: #77DD77;
