--- a/css/app.css
+++ b/css/app.css
@@ -4,11 +4,53 @@ body:has(.app) {
 
 .app {
   display: flex;
+  flex-wrap: wrap;
   height: 100vh;
 }
 
 .app > header {
   width: 100vw;
   height: 70px;
-  background-color: #77DD77;
+  background-color: #89eda0;
+}
+
+.app > aside {    /* both side bars */
+  width: min(20vw, calc(50vw - 300px));
+  height: calc(100vh - 70px);
+  background-color: #f0f9f2;
+}
+
+.app > aside:first-of-type {  /* only left side bar */
+  border-right: 4px solid #6ac67e;
+  font-family: Verdana, serif; /* might add avenir or frutiger font */
+  font-size: 20px;
+}
+
+.app > aside:last-of-type {  /* only right side bar */
+  border-left: 4px solid #6ac67e;
+  font-family: Verdana, serif;
+  font-size: 20px;
+}
+
+.app > main {
+  flex-grow: 1;
+}
+
+.app > aside > header {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  background-color: #d3ffe6;
+  /* gap: 10px;   trying to add space between images and border
+  justify-content: space-around; */
+}
+
+.app > aside > header > div {
+  display: inline-block;
+  flex-grow: 1;
+  text-align: center;
+}
+
+.app > aside > header > img {
+  margin: auto;
 }
