--- a/css/app.css
+++ b/css/app.css
@@ -17,6 +17,27 @@ body:has(.app) {
   font-size: 30px;
 }
 
+.app > main > footer {
+  height: 210px;
+  background-color: #f0f9f2;
+  border-top: 4px solid #6ac67e;
+  font-size: 20px;
+  font-family: Verdana, serif;
+}
+
+.app > main > footer > header {
+  display: flex;
+  width: 100%;
+  height: 30px;
+  background-color: #d3ffe6;
+}
+
+.app > main > footer > header > div {
+  display: inline-block;
+  flex-grow: 1;
+  text-align: center;
+}
+
 .app > aside {    /* both side bars */
   width: min(20vw, calc(50vw - 300px));
   height: calc(100vh - 70px);
@@ -36,6 +57,12 @@ body:has(.app) {
 }
 
 .app > main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.app > main > section {
   flex-grow: 1;
 }
 
