Implemented all the icons into the design of the web app

--- a/css/app.css
+++ b/css/app.css
@@ -15,6 +15,9 @@ body:has(.app) {
   text-align: center;
   font-family: Verdana, serif;
   font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app > main > footer {
@@ -83,4 +86,32 @@ body:has(.app) {
 
 .app > aside > header > img {
   margin: auto;
+}
+
+#share {
+  position:relative; left: 280px
+}
+
+#help {
+  position:relative; left: 305px
+}
+
+#profile {
+  position:relative; left: 330px
+}
+
+#settings {
+  position:relative; left: 355px
+}
+
+#logo {
+  position:relative; left: -280px
+}
+
+#collapseLeft {
+  transform: rotate(180deg);
+}
+
+#collapseDown {
+  transform: rotate(90deg);
 }
