--- a/css/app.css
+++ b/css/app.css
@@ -13,8 +13,8 @@ body:has(.app) {
   height: 70px;
   background-color: #89eda0;
   text-align: center;
-  font-family: Verdana, serif;
   font-size: 30px;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,7 +25,7 @@ body:has(.app) {
   background-color: #f0f9f2;
   border-top: 4px solid #6ac67e;
   font-size: 20px;
-  font-family: Verdana, serif;
+  font-family: 'Montserrat', sans-serif;
   overflow: auto;
 }
 
@@ -51,13 +51,13 @@ body:has(.app) {
 
 .app > aside:first-of-type {  /* only left side bar */
   border-right: 4px solid #6ac67e;
-  font-family: Verdana, serif; /* might add avenir or frutiger font */
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
 }
 
 .app > aside:last-of-type {  /* only right side bar */
   border-left: 4px solid #6ac67e;
-  font-family: Verdana, serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
 }
 
