--- a/css/app.css
+++ b/css/app.css
@@ -14,9 +14,6 @@ body:has(.app) {
   height: 70px;
   background-color: #89eda0;
   display: table;
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: space-around; */
   text-align: center;
   font-size: 30px;
   font-family: 'Montserrat', sans-serif;
@@ -40,11 +37,7 @@ body:has(.app) {
 
 .app > header > .title {
   display: table-cell;
-  /* flex-grow: 8; */
   margin: auto;
-  /* text-align: center; */
-  /* height: 100%; */
-  /* line-height: 100%; */
   vertical-align: middle;
 }
 
@@ -89,17 +82,15 @@ body:has(.app) {
 
 .app > aside:first-of-type {  /* only left side bar */
   border-right: 4px solid #6ac67e;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
 }
 
 .app > aside:last-of-type {  /* only right side bar */
   border-left: 4px solid #6ac67e;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
 }
 
 .app > aside > header {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
   display: flex;
   width: 100%;
   height: 30px;
@@ -115,6 +106,17 @@ body:has(.app) {
 .app > aside > header > img {
   margin: auto;
 }
+
+.app > aside > :not(header) {
+  display: block;
+  text-align: center;
+  padding: 10px;
+}
+
+.app > aside > :not(header) ~ * {
+  border-top: 2px solid #b0ecca;
+}
+
 
 #collapseLeft {
   transform: rotate(180deg);
