--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,12 @@
+/* stylelint-disable no-descending-specificity */
+
 * {
   box-sizing: border-box;
 }
 
 body:has(.app) {
   margin: 0;
+  overflow: hidden;
 }
 
 #root {
@@ -62,7 +65,6 @@ body:has(.app) {
 
 .app > main > footer {
   height: 210px;
-  background-color: #f0f9f2;
   border-top: 4px solid #6ac67e;
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
@@ -70,6 +72,7 @@ body:has(.app) {
 }
 
 .app > main > footer > header {
+  position: sticky;
   display: flex;
   width: 100%;
   height: 30px;
@@ -82,11 +85,38 @@ body:has(.app) {
   text-align: center;
 }
 
+.categoryHeader {
+  background-color: #f0f9f2;
+}
+
+.categoryHeader .arrow {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 5px;
+  margin: auto;
+}
+
+.categoryHeader.open .arrow {
+  transform: rotate(180deg);
+}
+
+.category {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.category > * {
+  margin: 10px 20px;
+}
+
 .app > aside {    /* both side bars */
   width: min(20vw, calc(50vw - 300px));
   height: calc(100vh - 70px);
   background-color: #f0f9f2;
   overflow: auto;
+  flex-shrink: 0;
 }
 
 .app > aside:first-of-type {  /* only left side bar */
@@ -148,7 +178,7 @@ body:has(.app) {
   flex-grow: 1;
   flex-direction: column;
   flex-wrap: nowrap;
-  overflow-y: auto;
+  overflow: auto;
   scroll-behavior: smooth;
 }
 
