--- a/css/app.css
+++ b/css/app.css
@@ -243,3 +243,11 @@ body:has(.app) {
   border-radius: 10px;
   padding: 0 5px;
 }
+
+.helpMenu {
+  z-index: 5;
+  position: absolute;
+  width: min(500px, 100vw);
+  height: min(400px, 80vh);
+  background-color: #fff;
+}
