--- a/css/app.css
+++ b/css/app.css
@@ -249,7 +249,7 @@ body:has(.app) {
   position: absolute;
   width: min(500px, 100vw);
   height: min(420px, 80vh);
-  background-color: #fff;
+  background-color: #f0f9f2;
   border: 4px solid #4f905d;
   display: flex;
   flex-direction: column;
