--- a/css/app.css
+++ b/css/app.css
@@ -275,7 +275,7 @@ body:has(.app) {
 }
 
 .helpMenu .close {
-  display: inline-block;
+  display: block;
   position: absolute;
   right: 5px;
   top: 0;
@@ -285,6 +285,7 @@ body:has(.app) {
   margin: auto;
   border: 2px solid #660000;
   color: #660000;
+  background-color: #ff8888;
   text-align: center;
   line-height: 0.6em;
   border-radius: 0.3em;
