Collapsable panels and component reorganization

--- a/css/app.css
+++ b/css/app.css
@@ -40,6 +40,10 @@ body:has(.app) {
   right: 20px;
 }
 
+.header > .iconsR [disabled] {
+  filter: contrast(0.3);
+}
+
 .header > .title {
   display: table-cell;
   margin: auto;
@@ -57,6 +61,7 @@ body:has(.app) {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .app > main > section {
@@ -65,20 +70,25 @@ body:has(.app) {
 
 .app > main > footer {
   --header-height: 30px;
+  --row-height: 210px;
 
-  height: 210px;
+  position: relative;
+  height: var(--row-height);
   border-top: 4px solid #6ac67e;
+  display: flex;
+  flex-direction: column;
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
-  overflow: auto;
+  transition: margin 0.5s ease;
+}
+
+.app > main > footer.collapsed {
+  margin-bottom: calc(var(--row-height) * -1);
 }
 
 .app > main > footer > header {
-  position: sticky;
-  top: 0;
   display: flex;
   width: 100%;
-  height: var(--header-height);
   background-color: #d3ffe6;
   z-index: 2;
 }
@@ -90,24 +100,34 @@ body:has(.app) {
 }
 
 .app > aside {    /* both side bars */
-  width: min(20vw, calc(50vw - 300px));
+  --column-width: max(min(20vw, calc(50vw - 300px)), 200px);
+
+  display: flex;
+  flex-direction: column;
+  width: var(--column-width);
   height: calc(100vh - 70px);
   background-color: #f0f9f2;
-  overflow: auto;
   flex-shrink: 0;
+  transition: margin 0.5s ease;
 }
 
 .app > aside:first-of-type {  /* only left side bar */
   border-right: 4px solid #6ac67e;
 }
 
+.app > aside:first-of-type.collapsed {
+  margin-left: calc(var(--column-width) * -1);
+}
+
 .app > aside:last-of-type {  /* only right side bar */
   border-left: 4px solid #6ac67e;
 }
 
+.app>aside:last-of-type.collapsed {
+  margin-right: calc(var(--column-width) * -1);
+}
+
 .app > aside > header {
-  position: sticky;
-  top: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
   display: flex;
@@ -127,20 +147,39 @@ body:has(.app) {
   margin: auto;
 }
 
-.app > aside > :not(header) {
+.app > aside > :not(header) > * {
   display: block;
   text-align: center;
   padding: 10px;
 }
 
-.app > aside > :not(header) ~ * {
+.app > aside > :not(header) > * ~ * {
   border-top: 2px solid #b0ecca;
 }
 
 #collapseLeft {
   transform: rotate(180deg);
+  transition: transform 0.4s ease;
+}
+
+.collapsed #collapseLeft {
+  transform: translateX(30px) rotate(0deg);
+}
+
+#collapseRight {
+  transition: transform 0.4s ease;
+}
+
+.collapsed #collapseRight {
+  transform: translateX(-30px) rotate(180deg);
 }
 
 #collapseDown {
   transform: rotate(90deg);
+  margin: calc((var(--header-height) - 25px) / 2);
+  transition: transform 0.4s ease;
+}
+
+.collapsed #collapseDown {
+  transform: translateY(-30px) rotate(270deg);
 }
